refactor: #1158 Remove firebaseId from migration and codebase (#1194)
