# mw-server/routes/user.route.go
@@ -19,6 +19,5 @@ func (cr *UserRoutes) UserRoute(rg *gin.RouterGroup) {
 	router := rg.Group("users")
 	router.GET("", cr.userController.GetAllUsers)
 	router.GET("/:userId", cr.userController.GetUserById)
-	router.POST("/getOrCreateByFirebaseId", auth.AuthMiddleware(), cr.userController.GetOrCreateUserByFirebaseId)
 	router.PATCH("/:userId", auth.AuthMiddleware(), cr.userController.UpdateUser)
 }
