# mw-server/schemas/users.schema.go
@@ -6,7 +6,6 @@ type CreateUserPayload struct {
 	Description string `json:"description" validate:"required"`
 	ImageUrl    string `json:"imageUrl" validate:"required"`
 	IsMentor    bool   `json:"isMentor" validate:"required"`
-	FirebaseId  string `json:"firebaseId" validate:"required"`
 }
 
 type UpdateUserPayload struct {
